# ansible-role-tripleo-provision-heat

./: .gitignore  .gitreview  README.md  groups  project.config  setup.cfg
doc/: tripleo-quickstart-on-ovb.rst
handlers/: main.yml
playbooks/: cleanup.yml  delete-older-images.yml  deploy.yml  heat-provision-tripleo-quickstart-extras.yml  heat-provision-tripleo-quickstart.yml  image-upload.yml
roles/cleanup/tasks/: cleanup-image.yml  cleanup-stack.yml  delete-older-images.yml  main.yml
roles/common-heat/defaults/: main.yml
roles/delete-older-images/meta/: main.yml
roles/delete-older-images/tasks/: main.yml
roles/deploy-stack/tasks/: main.yml
roles/deploy-stack/templates/: clouds.yaml.j2  env.yaml.j2
roles/setup-undercloud/tasks/: main.yml
roles/setup-undercloud/templates/: ifcfg-external-interface.j2  setup-undercloud-connectivity.sh.j2
roles/upload-undercloud-image/tasks/: main.yml
tests/: test.yml
vars/: main.yml
