[metadata]
name = ansible-role-tripleo-provision-heat
summary = ansible-role-tripleo-provision-heat - A ansible role for provisioning an undercloud and baremetal nodes using heat.
description-file =
    README.md
author = RDO-CI Team
author-email = rlandy@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-provision-heat
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/provision-heat/defaults = defaults/*
    usr/local/share/ansible/roles/provision-heat/handlers = handlers/*
    usr/local/share/ansible/roles/provision-heat/meta = meta/*
    usr/local/share/ansible/roles/provision-heat/tasks = tasks/*
    usr/local/share/ansible/roles/provision-heat/templates = templates/*
    usr/local/share/ansible/roles/provision-heat/files = files/*
    usr/local/share/ansible/roles/provision-heat/tests = tests/*
    usr/local/share/ansible/roles/provision-heat/vars = vars/*
    usr/local/share/tripleo-quickstart/library = library/*
    usr/local/share/ansible/roles/provision-heat/roles = roles/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
